Sharole Music Player

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+
+
+}
+
+
+#main-control{
+  width: 100%;
+
+}
+
+.grid{
+  margin: auto;
+  border-right: 5px;
+  box-shadow: 4px 4px 1px rgba(0,0,0,0.5);
+  text-align: center;
+  }
+#turn-off{
+  margin: auto;
+  border-right: 5px;
+  box-shadow: 4px 4px 1px rgba(0,0,0,0.5);
+  text-align: center;
+}
+body{
+  background-repeat:repeat;
+  background-size: 45%;
+}
+.button{
+  margin: 7px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+}
+.drum-pad{
+  margin:10px;
+  box-shadow: 4px 4px 1px rgba(0,0,0,0.5);
 }
 
-.App-link {
-  color: #61dafb;
+.card:hover{
+  opacity: 0.4;
+}
+#instructions{
+font-size: 20px;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
